--- a/index.html
+++ b/index.html
@@ -781,6 +781,9 @@ function addPlaylist() {
     var uri = $("#uri-input").val();
     uri = normalizeUri(uri);
 
+    $("#name").val("");
+    $("#uri-input").val("");
+
     if (isValidPlaylistUri(uri)) {
         loadPlaylist(name, uri);
     } else {
@@ -889,6 +892,22 @@ $(document).ready(
         }
     }
 );
+
+</script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-3675615-27']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type =
+'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' :
+'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(ga, s);
+  })();
 
 </script>
 </body>
