--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1 id='ttitle' >Mash Your Music</h1>
                 <p class='ttext'>
                     Getting together with your friends this holiday season? Use Mash Your Music
-                    to combine all of <b>Your Top Songs 2016</b> playlists together into a
+                    to combine all of <b>Your Top Songs 2017</b> playlists together into a
                     single bangin' playlist.
                     <br>
                 </p>
@@ -54,7 +54,7 @@
           </div>
           <div id="work" class="work"> 
             <div class='ttext'>
-                Enter the names and URIs of the <br><b>Your Top Songs 2016</b> <br> playlists of you and your friends. 
+                Enter the names and URIs of the <br><b>Your Top Songs 2017</b> <br> playlists of you and your friends. 
             </div>
             <form class="form-inline">
               <div><br> </div>
@@ -85,10 +85,10 @@
     </div>
     <div class="intro row"> 
         <div class="more-info col-sm-offset-3 col-sm-6">
-            <img src="images/yts.jpg">
+            <img src="https://lineup-images.scdn.co/your-top-songs-2017_DEFAULT-en.jpg">
             <div><br></div>
             Mash Your Music will help you create a great playlist by combining the best music from
-            everyone's Top Songs 2016 playlist. The generated playlist will contain a little bit of everyone's
+            everyone's Top Songs 2017 playlist. The generated playlist will contain a little bit of everyone's
             favorites with an emphasis on music that is shared by the most people.
             <div><br></div>
             Mash Your Music will also show you some fun attributes about your group such as who has 
